# fujinet-go-adam-desktop

./: .gitignore  CMakeLists.txt  COMPLIANCE.md  README.md
.github/workflows/: ci.yml
cmake/: StageAdamcore.cmake
core/: CMakeLists.txt
core/debugger/: debugger.c  symbols.c  symbols.h  symbols_builtin.c  vdpview.c  z80dasm.c  z80dasm.h
core/debugger/symbols/: eos.sym  os7.sym
core/include/: adamdebug.h  adamsession.h
core/src/: audio_sdl.c  compat.h  dynlib.h  fujinet_runtime.c  gamepad_sdl.c  input_map.c  paths.c  roms_embedded.h  session.c  session_internal.h  settings.c
core/tests/: boot_smoke.c  dasm_test.c  debug_boot_test.c  gamepad_map_test.c  gamepad_probe.c  input_test.c  test_tmp.h  vdp_decode_test.c
frontends/gnome/: CMakeLists.txt  display.c  display.h  main.c  prefs.c  prefs.h  webview.c  webview.h  window.c  window.h
frontends/gnome/data/: online.fujinet.go.adam.gnome.desktop  online.fujinet.go.adam.gnome.metainfo.xml
frontends/gnome/debugger/: dbg_window.c  dbg_window.h
frontends/kde/: CMakeLists.txt  DisplayWidget.cpp  DisplayWidget.h  FujiNetWindows.cpp  FujiNetWindows.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
frontends/kde/data/: online.fujinet.go.adam.kde.desktop
frontends/kde/debugger/: DebuggerWindow.cpp  DebuggerWindow.h
frontends/macos/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  DisplayView.h  DisplayView.m  Info.plist.in  main.m
frontends/macos/debugger/: DebuggerWindow.h  DebuggerWindow.m
frontends/windows/: CMakeLists.txt  main.c  resource.h
packaging/flatpak/: online.fujinet.go.adam.gnome.yml
tools/adamcore/: embed-roms.py  stage-adamcore.sh
tools/fujinet/: build-fujinet-desktop.sh
tools/fujinet/support/: fujinet_desktop_entry.cpp
tools/symbols/: extract-symbols.py
